--- a/src/main/resources/informe-LaTex/arquitecturasQ.tex
+++ b/src/main/resources/informe-LaTex/arquitecturasQ.tex
@@ -3,10 +3,10 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsection{Características generales} 
 
-La Arquitectua Q tiene 8 registros de uso genereal de 16 bits, denominados R0..R7, registros especiales de 16 bits tales como PC - \textit{Program counter}, SP\footnote{Comienza en la direccion FFEF.} - \textit{Stack Pointer} y los Flags de un bit como Negative, oVerflow, Carry, Zero. Tambien tiene un conjunto de instrucciones que detallaran mas adelante. Todas las instrucciones Alteran los flags excepto MOV, CALL, RET, JMP, Jxx. De las instrucciones que alteran los Flags, todas dejan C y V en 0 a excepcion de ADD, SUB y CMP.  
-La instruccion DIV tiene como efecto [destino (- destino \%\footnote{El caracter \% denota el cociente de la división entera.} origen ]. 
-La instruccion MUL\footnote{El resultado de la operación \textbf{MUL} ocupa 32 bits, almacenándose los 16 bits menos significativos en el operando destino y los 16 bits mas significativos en el registro \textbf{R7}.} tiene como efecto [destino (- estino * origen].
-Por ultimo tiene una Memoria que tiene direcciones de 16 bit, donde el tamaño de cada celda tambien es de 16 bit. La Memoria tiene un tamanio de 65536 celdas. \\ 
+La Arquitectura Q tiene 8 registros de uso general de 16 bits, denominados R0..R7, registros especiales de 16 bits tales como PC - \textit{Program counter}, SP\footnote{Comienza en la dirección FFEF.} - \textit{Stack Pointer} y los Flags de un bit como Negative, oVerflow, Carry, Zero. También tiene un conjunto de instrucciones que detallaran mas adelante. Todas las instrucciones Alteran los flags excepto MOV, CALL, RET, JMP, Jxx. De las instrucciones que alteran los Flags, todas dejan C y V en 0 a excepción de ADD, SUB y CMP.  
+La instrucción DIV tiene como efecto [destino (- destino \%\footnote{El carácter \% denota el cociente de la división entera.} origen ]. 
+La instrucción MUL\footnote{El resultado de la operación \textbf{MUL} ocupa 32 bits, almacenándose los 16 bits menos significativos en el operando destino y los 16 bits mas significativos en el registro \textbf{R7}.} tiene como efecto [destino (- destino * origen].
+Por ultimo tiene una Memoria que tiene direcciones de 16 bit, donde el tamaño de cada celda también es de 16 bit. La Memoria tiene un tamanio de 65536 celdas. \\ 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsection{Modos de direccionamiento}
 Los siguientes son los modos de direccionamiento implementados en la Arquitectura Q.
@@ -22,7 +22,7 @@ Ejemplos:
 
 
 \item \textbf{Directo}
-Con este modo de direccionamiento se denota un operando alojado en una dirección de memoria o de puertosLa codificación de este modo se indica en la tabla \ref{tablamodos}.
+Con este modo de direccionamiento se denota un operando alojado en una dirección de memoria o de puertos. La codificación de este modo se indica en la tabla \ref{tablamodos}.
 
 Ejemplos:
 \begin{itemize}
@@ -83,7 +83,7 @@ Las instrucciones de dos operandos descriptas a continuación son instrucciones 
 \begin{enumerate}
 \item \textbf{MUL destino, origen}
 Código de operación: 0000
-Esta instrucción describe la multiplicación entre los datos de los dos operandos. Esta operación es la única que cuyo resultado puede ser 32 bits, que son \ojo{lo que ocuparia más de una celda de memoria en codigo binario.}{(mara)No entiendo!. Asi esta mejor??}, por lo que los primeros 16 bits, es decir, la primer mitad, es guardada en el registro R7 y la segunda en el operando destino.
+Esta instrucción describe la multiplicación entre los datos de los dos operandos. Esta operación es la única que cuyo resultado puede ser 32 bits, que son \ojo{lo que ocuparía más de una celda de memoria en código binario.}{(mara)No entiendo!. Así esta mejor??}, por lo que los primeros 16 bits, es decir, la primer mitad, es guardada en el registro R7 y la segunda en el operando destino.
  
 \item \textbf{ADD destino, origen}
 Código de operación: 0010
@@ -103,7 +103,7 @@ Esta instrucción describe la copia de datos del dato alojado en el operando ori
 
 \item \textbf{AND destino, origen}
 Código de operación: 0100
-Esta instrucción describe la operación logica "y" bit a bit entre los datos de los dos operandos. El resultado de la ejecución de esta operación es guardado en el operando destino.
+Esta instrucción describe la operación lógica "y" bit a bit entre los datos de los dos operandos. El resultado de la ejecución de esta operación es guardado en el operando destino.
 
 \item \textbf{CMP destino, origen}
 Código de operación: 0110
@@ -111,13 +111,13 @@ Esta instrucción describe la resta entre dos operandos, sin guardar el resultad
 
 \item \textbf{OR destino, origen}
 Código de operación: 0101
-Esta instrucción describe la operación logica "o" bit a bit entre los datos de los dos operandos. El resultado de la ejecución de esta operación es guardado en el operando destino.
+Esta instrucción describe la operación lógica "o" bit a bit entre los datos de los dos operandos. El resultado de la ejecución de esta operación es guardado en el operando destino.
 \end{enumerate}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsubsection{Instrucciones de 1 operando origen  (falta revisar Mara)}
 
-El formato de instruccion de un operando origen es el siguiente:
+El formato de instrucción de un operando origen es el siguiente:
 
   CodOp   +   relleno   +  Modo origen +   Origen
 (4 bits)      (000000)        (6 bits)    (16 bits)
@@ -125,7 +125,7 @@ El formato de instruccion de un operando origen es el siguiente:
 \begin{enumerate}
 \item \textbf{CALL origen}
 Código de operación: 1011
-El efecto del CALL es guardar la direccion de memoria en la celda de la dirección que se encuentra guardadad en el SP (Stack pointer) aumentar el SP y guardar en el PC (Program Counter) el dato que se encuentra guardado en el operando origen ya que describe el llamado a una subrutina que comienza en la celda de memoria cuya direccion esta guardada en el operando origen.
+El efecto del CALL es guardar la dirección de memoria en la celda de la dirección que se encuentra guardada en el SP (Stack pointer) aumentar el SP y guardar en el PC (Program Counter) el dato que se encuentra guardado en el operando origen ya que describe el llamado a una subrutina que comienza en la celda de memoria cuya dirección esta guardada en el operando origen.
 
 \item \textbf{JMP origen}
 Código de operación: 0110
@@ -143,7 +143,7 @@ El formato de instrucción de un operando destino es el siguiente:
 \begin{enumerate}
 \item \textbf{NOT destino}
 Código de operación: 1001
-Esta instrucción describe la operación logica "negación" bit a bit en el datos del operando destino. El resultado de la ejecución de esta operación es guardado en la misma celda o registro de donde es leído el dato inicialmente.
+Esta instrucción describe la operación lógica "negación" bit a bit en el datos del operando destino. El resultado de la ejecución de esta operación es guardado en la misma celda o registro de donde es leído el dato inicialmente.
 \end{enumerate}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
